--- a/es_2.ipynb
+++ b/es_2.ipynb
@@ -479,7 +479,7 @@
     "The values for which NMI is maximized seem to be the ones we selected in the cells above. The best result is obtained by imposing $\\epsilon$ = \n",
     "257 and $m_p$= 1.\n",
     "\n",
-    "The high NMI region indicates a correlation between $\\epsilon$ and $m_p$. A positive outcome implies a correspondence between an increase in $\\epsilon$ and $m_p$."
+    "The high NMI region indicates a positive correlation between $\\epsilon$ and $m_p$. A positive outcome implies a correspondence between an increase in $\\epsilon$ and $m_p$ as we're working with well defined clusters with roughly constant density."
    ]
   }
  ],
