--- a/Project/Proj.ipynb
+++ b/Project/Proj.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gaia/.local/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 43605 instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -23,7 +12,11 @@
     "\n",
     "# parallelize the work using dask\n",
     "from dask.distributed import Client\n",
-    "client = Client()"
+    "client = Client()\n",
+    "\n",
+    "#for not having the output truncated\n",
+    "n=100 #number of rows to print\n",
+    "pd.set_option('display.max_rows', n)"
    ]
   },
   {
@@ -354,244 +347,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loading data \n",
+    "\n",
     "#df_demo = dd.read_csv(r\"./demo_Z0.00014/output_*.csv\", dtype={'BEvent': float})\n",
     "df0 = dd.read_csv(\"./Z0.02_a3_cM70/output_0.csv\", dtype={'BEvent': float})\n",
     "df0 = df0.persist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>name</th>\n",
-       "      <th>Mass_0</th>\n",
-       "      <th>Radius_0</th>\n",
-       "      <th>Phase_0</th>\n",
-       "      <th>PhaseBSE_0</th>\n",
-       "      <th>RemnantType_0</th>\n",
-       "      <th>Hsup_0</th>\n",
-       "      <th>Mass_1</th>\n",
-       "      <th>Radius_1</th>\n",
-       "      <th>Phase_1</th>\n",
-       "      <th>PhaseBSE_1</th>\n",
-       "      <th>RemnantType_1</th>\n",
-       "      <th>Hsup_1</th>\n",
-       "      <th>Semimajor</th>\n",
-       "      <th>Eccentricity</th>\n",
-       "      <th>BWorldtime</th>\n",
-       "      <th>Period</th>\n",
-       "      <th>GWtime</th>\n",
-       "      <th>RL0</th>\n",
-       "      <th>RL1</th>\n",
-       "      <th>BEvent</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>npartitions=1152</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>int64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>\n",
-       "<div>Dask Name: read-csv, 1 graph layer</div>"
-      ],
-      "text/plain": [
-       "Dask DataFrame Structure:\n",
-       "                     ID   name   Mass_0 Radius_0 Phase_0 PhaseBSE_0 RemnantType_0   Hsup_0   Mass_1 Radius_1 Phase_1 PhaseBSE_1 RemnantType_1   Hsup_1 Semimajor Eccentricity BWorldtime   Period   GWtime      RL0      RL1   BEvent\n",
-       "npartitions=1152                                                                                                                                                                                                                     \n",
-       "                  int64  int64  float64  float64   int64    float64         int64  float64  float64  float64   int64    float64         int64  float64   float64      float64    float64  float64  float64  float64  float64  float64\n",
-       "                    ...    ...      ...      ...     ...        ...           ...      ...      ...      ...     ...        ...           ...      ...       ...          ...        ...      ...      ...      ...      ...      ...\n",
-       "...                 ...    ...      ...      ...     ...        ...           ...      ...      ...      ...     ...        ...           ...      ...       ...          ...        ...      ...      ...      ...      ...      ...\n",
-       "                    ...    ...      ...      ...     ...        ...           ...      ...      ...      ...     ...        ...           ...      ...       ...          ...        ...      ...      ...      ...      ...      ...\n",
-       "                    ...    ...      ...      ...     ...        ...           ...      ...      ...      ...     ...        ...           ...      ...       ...          ...        ...      ...      ...      ...      ...      ...\n",
-       "Dask Name: read-csv, 1 graph layer"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-17 11:38:06,671 - distributed.worker.memory - WARNING - Unmanaged memory use is high. This may indicate a memory leak or the memory may not be released to the OS; see https://distributed.dask.org/en/latest/worker-memory.html#memory-not-released-back-to-the-os for more information. -- Unmanaged memory: 672.78 MiB -- Worker memory limit: 0.93 GiB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df0"
    ]
   },
   {
@@ -830,9 +590,11 @@
     "cond_1 = ((df0.PhaseBSE_0==8) | (df0.PhaseBSE_0==7)) & (df0.PhaseBSE_1==14.0) \n",
     "cond_2 = ((df0.PhaseBSE_1==8) | (df0.PhaseBSE_1==7)) & (df0.PhaseBSE_0==14.0)\n",
     "df0_WRBH = df0.loc[ cond_1 | cond_2]\n",
-    "data_WRBH = df0_WRBH[['ID', 'Mass_0', 'Mass_1', 'Semimajor', 'Eccentricity']].drop_duplicates('ID')\n",
+    "\n",
+    "data_WRBH = df0_WRBH[['ID', 'Mass_0', 'Mass_1', 'Semimajor', 'Eccentricity']].drop_duplicates('ID') #selecting only 1st row of each ID\n",
     "data_WRBH.compute()\n",
-    "id0_WRBH = data_WRBH['ID']"
+    "\n",
+    "id0_WRBH = data_WRBH['ID'] #taking only the IDs"
    ]
   },
   {
@@ -1374,7 +1136,7 @@
     }
    ],
    "source": [
-    "#### GWW BBH merge \n",
+    "#### GW BBH merge (Binary Black Holes that merge via Gravitational Waves Emission in less than 14 bilions years)\n",
     "cond_1 = (df0.PhaseBSE_0 == 14.0) & (df0.PhaseBSE_1 == 14.0)\n",
     "cond_2 = (df0.GWtime + df0.BWorldtime) < int(14e+03)\n",
     "id0_GW = df0.loc[cond_1 & cond_2]['ID'].drop_duplicates()\n",
@@ -1792,7 +1554,7 @@
     }
    ],
    "source": [
-    "id0_both = np.intersect1d(id0_WRBH, id0_GW)"
+    "id0_both = np.intersect1d(id0_WRBH, id0_GW) #ID of WR-BH systems that evolve in a BH-BH systems that merge via GW emission"
    ]
   },
   {
@@ -1829,7 +1591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df0_WRBH_stable = df0_WRBH.loc[df0_WRBH['BEvent']==5, ['ID','BEvent']].groupby('ID').count().reset_index()"
+    "#selecting ID of MT stable events (Roche Lobe)\n",
+    "df0_WRBH_stable = df0_WRBH.loc[df0_WRBH['BEvent']==5, ['ID','BEvent']].groupby('ID').count().reset_index() #reset index serve per avere ID come colonna e non come indice"
    ]
   },
   {
@@ -1838,6 +1601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#selecting ID of MT unstable events (Common Envelop)\n",
     "df0_WRBH_unstable = df0_WRBH.loc[(df0_WRBH['BEvent']==7) | (df0_WRBH['BEvent']==11), ['ID','BEvent']].groupby('ID').count().reset_index()"
    ]
   },
@@ -2162,8 +1926,11 @@
     }
    ],
    "source": [
+    "#merging the two tables\n",
     "mass_transfer0 = df0_WRBH_stable.merge(df0_WRBH_unstable, how='outer', on='ID')\n",
     "mass_transfer0.rename(columns={'BEvent_x': 'MTEvents_stable', 'BEvent_y': 'MTEvents_unstable'})\n",
+    "\n",
+    "#sustituting NA values with zeros\n",
     "mass_transfer0['MTEvents_unstable'] = mass_transfer0['MTEvents_unstable'].fillna(0).astype(int)\n",
     "mass_transfer0['MTEvents_stable'] = mass_transfer0['MTEvents_stable'].fillna(0).astype(int)"
    ]
@@ -2330,7 +2097,10 @@
     }
    ],
    "source": [
+    "#merge stabel-unstable table with the table containing parameters of the binary system\n",
     "data_0 = mass_transfer0.merge(data_WRBH, how='inner', on='ID')\n",
+    "\n",
+    "#adding column which says if the system merge\n",
     "col = data_0['ID'].isin(id0_both).astype(int)\n",
     "data_0 = data_0.assign(Merge=col)"
    ]
@@ -2341,80 +2111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_0.to_csv('out.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#loading the output\n",
-    "df = pd.read_csv('out.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_merge_0 = df[df['Merge'] == 0]\n",
-    "df_merge_1 = df[df['Merge'] == 1]\n",
-    "\n",
-    "# Create a scatter plot for each subset of the data\n",
-    "plt.scatter(df_merge_0['Mass_0'], df_merge_0['Mass_1'], s=0.8, c='blue', label='Merge=0')\n",
-    "plt.scatter(df_merge_1['Mass_0'], df_merge_1['Mass_1'], s=0.8, c='red', label='Merge=1')\n",
-    "\n",
-    "# Add labels and title\n",
-    "plt.xlabel('Mass_0')\n",
-    "plt.ylabel('Mass_1')\n",
-    "plt.title('Scatter plot of Mass_0 vs Mass_1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#semimajor distribution for merging and non merging systems\n",
-    "df_merge_0.hist(column='Semimajor', color='blue', label='No merge')\n",
-    "df_merge_1.hist(column='Semimajor', color='red', label='Merge')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#frequency of stable and unstable mass transfer events for merging systems\n",
-    "count_stable = df_merge_0.MTEvents_stable.sum()\n",
-    "count_unstable = df_merge_0.MTEvents_unstable.sum()\n",
-    "\n",
-    "plt.bar([0,0.2], [count_stable, count_unstable], width=0.1) #valori a caso per le x giusto da averli separati\n",
-    "\n",
-    "plt.xticks([])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#frequency of stable and unstable mass transfer events for non-merging systems\n",
-    "\n",
-    "count_stable = df_merge_1.MTEvents_stable.sum()\n",
-    "count_unstable = df_merge_1.MTEvents_unstable.sum()\n",
-    "\n",
-    "plt.bar([0,0.2], [count_stable, count_unstable], width=0.1) #valori a caso per le x giusto da averli separati\n",
-    "\n",
-    "plt.xticks([])"
+    "#saving the output\n",
+    "data_0.to_csv('./out.csv', index=False)  "
    ]
   }
  ],
@@ -2423,6 +2121,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
