--- a/Project/Proj.ipynb
+++ b/Project/Proj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-22fa7032-1431-11ef-b659-ffd687d3db45</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-8ede1adf-168f-11ef-87f6-4b869169a2d8</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -44,7 +44,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43605/status\" target=\"_blank\">http://127.0.0.1:43605/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -62,11 +62,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">719bd170</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">50397ba3</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:43605/status\" target=\"_blank\">http://127.0.0.1:43605/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 4\n",
@@ -77,7 +77,7 @@
        "                    <strong>Total threads:</strong> 8\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Total memory:</strong> 3.74 GiB\n",
+       "                    <strong>Total memory:</strong> 3.72 GiB\n",
        "                </td>\n",
        "            </tr>\n",
        "            \n",
@@ -99,11 +99,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-52bc0bc2-a371-4e7f-8890-57b76011c8da</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-cf6ab324-2f5b-470b-8df1-5596ba4dd4ae</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:42413\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:35705\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -111,7 +111,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:43605/status\" target=\"_blank\">http://127.0.0.1:43605/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 8\n",
@@ -122,7 +122,7 @@
        "                        <strong>Started:</strong> Just now\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Total memory:</strong> 3.74 GiB\n",
+       "                        <strong>Total memory:</strong> 3.72 GiB\n",
        "                    </td>\n",
        "                </tr>\n",
        "            </table>\n",
@@ -145,7 +145,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:34987\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:34879\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 2\n",
@@ -153,7 +153,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:35725/status\" target=\"_blank\">http://127.0.0.1:35725/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:45119/status\" target=\"_blank\">http://127.0.0.1:45119/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 0.93 GiB\n",
@@ -161,13 +161,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:32987\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:37609\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-zvpvo_4y\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-lkxa271_\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -190,7 +190,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:39981\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:42231\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 2\n",
@@ -198,7 +198,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43765/status\" target=\"_blank\">http://127.0.0.1:43765/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:35863/status\" target=\"_blank\">http://127.0.0.1:35863/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 0.93 GiB\n",
@@ -206,13 +206,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:35583\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36223\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-77vl3gx4\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-psrzjeyf\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -235,7 +235,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:37081\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:44819\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 2\n",
@@ -243,7 +243,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:41959/status\" target=\"_blank\">http://127.0.0.1:41959/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:44347/status\" target=\"_blank\">http://127.0.0.1:44347/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 0.93 GiB\n",
@@ -251,13 +251,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36849\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:41375\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-vsdbtskl\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-56zgf60t\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -280,7 +280,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:40243\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:43123\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 2\n",
@@ -288,7 +288,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43529/status\" target=\"_blank\">http://127.0.0.1:43529/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:45465/status\" target=\"_blank\">http://127.0.0.1:45465/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 0.93 GiB\n",
@@ -296,13 +296,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:32825\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:41411\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-oqgisakx\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-867_vx_i\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -329,10 +329,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:42413' processes=4 threads=8, memory=3.74 GiB>"
+       "<Client: 'tcp://127.0.0.1:35705' processes=4 threads=8, memory=3.72 GiB>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,14 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#loading data \n",
     "\n",
-    "#df_demo = dd.read_csv(r\"./demo_Z0.00014/output_*.csv\", dtype={'BEvent': float})\n",
-    "df0 = dd.read_csv(\"./Z0.02_a3_cM70/output_0.csv\", dtype={'BEvent': float})\n",
+    "path = \"./Z0.02_a3_cM70/output_0.csv\"\n",
+    "#\"/home/albertos/Astro_data/demo_Z0.00014/output_*.csv\"\n",
+    "df0 = dd.read_csv(path, dtype={'BEvent': float})\n",
     "df0 = df0.persist()"
    ]
   },
