--- a/es_2/exercise2.ipynb
+++ b/es_2/exercise2.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Group 14\n",
+    "Dario Puggioni, ID: 2107760\n",
+    "\n",
+    "Alberto Salvador, ID: 2112317\n",
+    "\n",
+    "Giancarlo Saran Gattorno, ID: 2106359\n",
+    "\n",
+    "Gaia Volpi, ID: 2107759"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
